tests/baselines/reference/downlevelLetConst2.errors.txt
tests/cases/compiler/downlevelLetConst2.ts(1,7): error TS1155: 'const' declarations must be initialized.


==== tests/cases/compiler/downlevelLetConst2.ts (1 errors) ====
    const a
          ~
!!! error TS1155: 'const' declarations must be initialized.